; ModuleID = '/home/carl/AnghaBench/kphp-kdb/spell/extr_spell-data.c_vk_aspell_config_replace.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/spell/extr_spell-data.c_vk_aspell_config_replace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [42 x i8] c"aspell_config_replace (%p, %s, %s) fail.\0A\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*)* @vk_aspell_config_replace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vk_aspell_config_replace(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i32 @aspell_config_replace(i32* %8, i8* %9, i8* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %22, label %13

13:                                               ; preds = %3
  %14 = load i32*, i32** %5, align 8
  %15 = ptrtoint i32* %14 to i32
  %16 = load i8*, i8** %6, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 (i32, i8*, i32, ...) @vkprintf(i32 1, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %15, i8* %16, i8* %17)
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @aspell_config_error_message(i32* %19)
  %21 = call i32 (i32, i8*, i32, ...) @vkprintf(i32 1, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %20)
  store i32 0, i32* %4, align 4
  br label %23

22:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %23

23:                                               ; preds = %22, %13
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @aspell_config_replace(i32*, i8*, i8*) #1

declare dso_local i32 @vkprintf(i32, i8*, i32, ...) #1

declare dso_local i32 @aspell_config_error_message(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
